# pyrtid

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  bibliography.bib  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
devs/: LBFGSBensemble.ipynb  Untitled-1.ipynb  a_dev_complete_chemistry.ipynb  aca.ipynb  chemistry_derivation.ipynb  chemistry_derivation_new.ipynb  chemistry_derivation_with_diffusion.ipynb  chemistry_derivation_with_diffusion2.ipynb  chemistry_derivation_with_diffusion_2_eqs_v2_fpi.ipynb  chemistry_derivation_with_diffusion_inv_diff.ipynb  chemistry_derivation_with_diffusion_inv_urn.ipynb  chemistry_derivation_with_diffusion_transport_4_eqs_v2.ipynb  chemistry_derivation_with_linear_transport.ipynb  chemistry_derivation_with_linear_transport_2_eqs.ipynb  chemistry_derivation_with_linear_transport_2_eqs_v2.ipynb  chemistry_derivation_with_linear_transport_2_eqs_v2_fpi.ipynb  chemistry_derivation_with_linear_transport_4_eqs.ipynb  chemistry_derivation_with_linear_transport_4_eqs_v2.ipynb  chemistry_derivation_with_linear_transport_4_eqs_v2_fp.ipynb  chemistry_derivation_with_linear_transport_fp.ipynb  density_derivation.ipynb  deriv_ens_grad.ipynb  deriv_ens_grad_2.ipynb  flow_derivation.ipynb  lbfgsb_dev.ipynb  obj_fun_notation.ipynb  preconditioner.ipynb  test_change_var_matrix.ipynb  test_elbfgsb.ipynb  test_lbfgsb.ipynb  tree.ipynb  wellfield.ipynb
docs/sources/: conf.py  index.rst
examples/adjoint/1d/: 1d_diff_inv_bump_3wells.ipynb  1d_perm_inv_BC_3wells.ipynb  diff_1ok_inv_diff_from_mob.ipynb  diff_1ok_inv_poro_from_mob.ipynb  diff_1ok_inv_urn_from_mob.ipynb  diff_adv_inv_diff_from_mob.ipynb  diff_adv_inv_perm_from_heads_df_transient.ipynb  diff_adv_inv_perm_from_heads_df_transient_simple.ipynb  diff_adv_inv_perm_from_heads_reg_flow.ipynb  diff_adv_inv_perm_from_heads_sf_stationary.ipynb  diff_adv_inv_perm_from_heads_sf_transient.ipynb  diff_adv_inv_perm_from_heads_sf_transient_yaxis.ipynb  diff_adv_inv_perm_from_heads_stationary.ipynb  diff_adv_inv_perm_from_mob_df.ipynb  diff_adv_inv_perm_from_mob_sf.ipynb  diff_adv_inv_perm_from_mob_sf_x.ipynb  diff_adv_inv_perm_from_mob_sf_y.ipynb  diff_adv_inv_poro_from_mob_sf.ipynb  diff_inv_diff_from_mob.ipynb  diff_inv_diff_reg_grad.ipynb  diff_inv_poro_from_mob.ipynb  grad_verif_1d_diff_adv_1ok_3_prod_2_inj.ipynb  grad_verif_1d_diff_adv_1ok_3inj_2prods.ipynb
examples/adjoint/2d/: 2d_diff_1stOc_adjoint.ipynb  2d_diff_mineral_inversion_20x20.ipynb  2d_diff_mineral_inversion_57x57.ipynb  2d_diffusion_advection_1st_order_kinetic_adjoint_all.ipynb  2d_diffusion_advection_1st_order_kinetic_adjoint_pyrtid.ipynb  2d_pure_diffusion_inversion.ipynb  41x3_3_prod_2_inj_diff_adv_min.ipynb  diff_adv_inv_k_sc_ih_df.ipynb  diff_adv_inv_k_sc_ih_sf.ipynb  diff_adv_inv_k_sc_ip_df.ipynb  diff_adv_inv_perm_from_density_df.ipynb  diff_adv_inv_perm_from_head_df.ipynb  diff_adv_inv_perm_from_head_sf.ipynb  diff_adv_inv_perm_from_mob_sf.ipynb  diff_adv_inv_perm_from_pressure_df.ipynb  diff_adv_inv_perm_modflow_small.ipynb  diff_adv_inv_poro_from_mob_sf.ipynb
examples/articles/benchmark/: config.toml
examples/articles/gd_gan/: config.toml
examples/articles/gd_spde/: config.toml
examples/benchmark/2d_perm_inv_modflow_benchmark_small/: 2d_perm_inv_modflow_benchmark_small.ipynb
examples/benchmarks/2_2d_diff_adv_1ok_bench/: 2d_diff_adv_1ok_bench.ipynb  config.toml
examples/benchmarks/2d_diff_adv_1ok _bench/: 2d_diff_adv_1ok _bench.ipynb  config.toml
examples/benchmarks/2d_perm_inv_modflow_benchmark_small/: 2d_perm_inv_modflow_benchmark_small.ipynb
examples/benchmarks/3_2d_diff_adv_1ok_gravity_bench/: 2d_diff_adv_1ok _gravity_bench.ipynb  Tuto_SPDE_Aniso_modified.ipynb  config.toml
examples/data/: obs.txt  reference_logK.txt
examples/gradient_smoothing/: gradient_smoothing.ipynb
examples/preconditioning/: discrete.ipynb  gradient_scaling.ipynb  sigmoide.ipynb  uniform2gaussian.ipynb
examples/regularization/: covariance_verification.ipynb  tikhonov_and_tv_verification.ipynb
examples/solvers/: test_lbfgsb.ipynb  test_pcga.ipynb
pyrtid/: __about__.py  __init__.py
pyrtid/forward/: __init__.py  flow_solver.py  geochem_solver.py  geochem_utils.py  models.py  newton.py  solver.py  transport_solver.py
pyrtid/inverse/: __init__.py  executors.py  gradient.py  lbfgsb.py  loss_function.py  model.py  obs.py  params.py  preconditioner.py
pyrtid/inverse/fsm/: fd.py  (+4 more)
pyrtid/plot/: __init__.py  config.py  plt_gradient.py  plt_obs_vs_simu.py  plt_percentiles.py
pyrtid/regularization/: __init__.py  aca.py  adaptive.py  base.py  covariances.py  discrete.py  distribution.py  geostatistical.py  hmatrix.py  lcurve.py  priors.py  stats.py  tikhonov.py  toeplitz.py  tree.py  tv.py
pyrtid/utils/: __init__.py  callbacks.py  cholesky.py  dataclass.py  enum.py  finite_differences.py  grid.py  means.py  numpy_helpers.py  operators.py  preconditioner.py  random_field.py  sparse_helpers.py  spatial_filters.py  spde.py  types.py  versions.py  wellfield.py
tests/forward/: test_geochem.py  test_models.py  test_solver.py
tests/integration/: test_1d_pure_hydro.py
tests/intergation/: test_1d_pure_hydro.py
tests/inverse/: test_aca.py  test_amodel.py  test_covariances.py  test_executors.py  test_hmatrix.py  test_lbfgsb.py  test_loss_function.py  test_obs.py  test_params.py  test_preconditioner.py  test_preconditionner.py  test_priors.py  test_reg_geostatistics.py  test_reg_local.py
tests/plot/: test_obs_vs_simu.py  test_plot_percentiles.py
tests/regularization/: test_aca.py  test_adaptive.py  test_base.py  test_hmatrix.py  test_lcurve.py  test_priors.py  test_reg_geostatistics.py  test_toeplitz.py  test_tree.py
tests/utils/: test_finite_differences.py  test_grid.py  test_means.py  test_numpy_helpers.py  test_operators.py  test_optimize.py  test_preconditioner.py  test_random_field.py  test_sparse_helpers.py  test_spatial_filters.py  test_spde.py  test_types.py  test_versions.py  test_wellfield.py
(+82 files in other folders)
