[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrtid"
dynamic = ["version"]
authors = [{ name = "Antoine Collet", email = "antoinecollet5@gmail.com" }]
readme = "README.rst"
description = "Reactive Transport Inversion demonstrator written in Python."
keywords = [
    "Inversion",
    "Gradient descent",
    "Reactive transport",
    "Parameters estimation",
    "Adjoint State",
    "Demonstrator",
]
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy",
    "gstools",
    "typing_extensions",
    # "pyesmda@git+https://gitlab.com/antoinecollet5/pyesmda.git@features/imp_inversions",
    "stochopy",
    "iterative_ensemble_smoother",
    "matplotlib",
    "joblib",
    "nested_grid_plotter",
    "lbfgsb",
    "numba",
    "scooby",
]
[project.optional-dependencies]
all = ['lbfgsb[install, lint, tests, examples, docs]']
sparse = ["suitesparse", "scikit-sparse"]
docs = [
    "sphinx<9",
    "nbsphinx",
    "nbsphinx-link>=1.3.1",
    "jupyter_sphinx>=0.3.2",
    "sphinx-jsonschema>=1.15",
    "pygments>=2.11.1",
    "pydata-sphinx-theme",
    "sphinxcontrib-bibtex",
]
tests = [
    "twine==1.14.0",
    "pytest",
    "pytest-runner",
    "pytest-cov",
    "pytest-cookies",
    "coverage",
    "numdifftools",
]
examples = [
    "numdifftools",
    "gstlearn",
    "pyvista[all]",
    "ipykernel",
    "shapely",
    "tomli",
]

lint = ["pre-commit", "codespell>=2.1.0", "ruff", "ty"]
install = ["pip", "wheel"]

requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://pypi.org/project/pyrtid/"
Documentation = "https://pyrtid.readthedocs.io/en/latest/"
Repository = "https://github.com/antoinecollet5/pyrtid"
Issues = "https://github.com/antoinecollet5/pyrtid/issues"
Changelog = "https://github.com/antoinecollet5/pyrtid/blob/master/CHANGELOG.rst"

[tool.setuptools]
# packages = ["pyrtid"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyrtid*"]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
version = { attr = "pyrtid.__about__.__version__" }

[tool.ruff]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
]
src = ["src", "tests", "docs"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "I"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.13.
target-version = "py313"

[tool.pylint.LOGGING]
# Format style used to check logging format string. `old` means using %
# formatting, `new` is for `{}` formatting,and `fstr` is for f-strings.
logging-format-style = "fstr"
